--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             >
           </p>
           <p>
-            I am an aspiring web developer. Currently studing CS at Univeristy
+            I am an aspiring web developer. Currently studying CS at University
             Of Oradea. I love working in the gym and doing all kind of sports
           </p>
         </td>
