--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <em
               ><strong>Student</strong> at
               <a href="https://www.uoradea.ro/Universitatea+din+Oradea"
-                >Univeristy Of Oradea</a
+                >University Of Oradea</a
               >
               .</em
             >
@@ -44,7 +44,7 @@
       </li>
       <li>
         <strong
-          >Univeristy Of Oradea,
+          >University Of Oradea,
           <a href="https://ieti.uoradea.ro/ro/"
             >Facultatea de Inginerie Electrica si Tehnologia Informatiei</a
           >
@@ -69,7 +69,7 @@
         </tr>
         <tr>
           <td>Aug 2022 - Oct 2022</td>
-          <td>Test Techincian at Plexus Corp.</td>
+          <td>Test Technician at Plexus Corp.</td>
         </tr>
       </tbody>
     </table>
